# cover-letter-rs

./: .releaserc  Cargo.toml  README.md  _typos.toml  cspell.config.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  code-spell-check.yaml
src/: arguments.rs  main.rs
